[package]
name = "elab"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diagnostic = { version = "0.0.0", path = "../diagnostic" }
files = { version = "0.0.0", path = "../files" }
internment = "0.7.4"
parse = { version = "0.0.0", path = "../parse" }
thiserror = "1.0.50"
tracing = "0.1.40"
